# depth_app

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  FILE_REFERENCE.md  QUICK_START.md  README.md  README_SETUP.md  SETUP_GUIDE.md  build.sh  build_apk.sh  depth_server.py  docker-compose.yml  export_model.py  pubspec.yaml  pyproject.toml  requirements.txt  run.sh  setup.sh  validate.sh
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/depth_app/: MainActivity.kt
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: depth_estimator.dart  logger.dart  main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner/: AppDelegate.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
